--- a/occupancy_detector/test_6_0.003_velocity_res.cfg
+++ b/occupancy_detector/test_6_0.003_velocity_res.cfg
@@ -5,37 +5,29 @@
 % Platform:xWR18xx
 % Scene Classifier:best_vel_res
 % Azimuth Resolution(deg):15 + Elevation
-% Range Resolution(m):0.125
-% Maximum unambiguous Range(m):11.2
-% Maximum Radial Velocity(m/s):1.28
-% Radial velocity resolution(m/s):0.04
-% Frame Duration(msec):100
+% Range Resolution(m):0.088
+% Maximum unambiguous Range(m):5.63
+% Maximum Radial Velocity(m/s):0.96
+% Radial velocity resolution(m/s):0.03
+% Frame Duration(msec):166.667
 % RF calibration data:None
-% Range Detection Threshold (dB):15
-% Doppler Detection Threshold (dB):15
-% Range Peak Grouping:enabled
-% Doppler Peak Grouping:enabled
-% Static clutter removal:disabled
-% Angle of Arrival FoV: Full FoV
-% Range FoV: Full FoV
-% Doppler FoV: Full FoV
 % ***************************************************************
-%Good for 5 second sampling, initial test
+%This one was no good
 sensorStop
 flushCfg
 dfeDataOutputMode 1
 channelCfg 15 7 0
 adcCfg 2 1
 adcbufCfg -1 0 1 1 1
-profileCfg 0 77 240 7 20 0 0 100 1 112 9333 0 0 30
+profileCfg 0 77 409 7 25 0 0 100 1 80 4705 0 0 30
 chirpCfg 0 0 0 0 0 0 0 1
 chirpCfg 1 1 0 0 0 0 0 4
 chirpCfg 2 2 0 0 0 0 0 2
-frameCfg 0 2 64 0 100 1 0
+frameCfg 0 2 64 0 166.667 1 0
 lowPower 0 0
-guiMonitor -1 1 1 0 0 0 1
-cfarCfg -1 0 2 8 4 3 0 20 1
-cfarCfg -1 1 0 8 4 4 1 20 1
+guiMonitor -1 1 1 0 0 0 0
+cfarCfg -1 0 2 8 4 3 0 15 1
+cfarCfg -1 1 0 8 4 4 1 15 1
 multiObjBeamForming -1 1 0.5
 clutterRemoval -1 1
 calibDcRangeSig -1 0 -5 8 256
@@ -43,11 +35,11 @@ extendedMaxVelocity -1 0
 lvdsStreamCfg -1 0 0 0
 compRangeBiasAndRxChanPhase 0.0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0
 measureRangeBiasAndRxChanPhase 0 1.5 0.2
-CQRxSatMonitor 0 3 4 35 0
-CQSigImgMonitor 0 55 4
+CQRxSatMonitor 0 3 4 51 0
+CQSigImgMonitor 0 39 4
 analogMonitor 0 0
 aoaFovCfg -1 -90 90 -90 90
-cfarFovCfg -1 0 0 11.19
-cfarFovCfg -1 1 -1.24 1.24
+cfarFovCfg -1 0 0 5.64
+cfarFovCfg -1 1 -0.74 0.74
 calibData 0 0 0
 sensorStart
